--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,20 +1,14 @@
-<div class="container">
+<div class="container" *ngIf="cars.length">
     <div class="row">
-        <div class="col">
-            <app-auction [carid]="12345"></app-auction>
-        </div>
-        <div class="col">
-            <app-auction [carid]="23415"></app-auction>
+        <div class="col" *ngFor="let car of cars">
+            <app-auction [car]="car"></app-auction>
         </div>
     </div>
 </div>
-<div class="container">
+<div class="container" *ngIf="cars.length==0">
     <div class="row">
         <div class="col">
-            <app-auction [carid]="32415"></app-auction>
-        </div>
-        <div class="col">
-            <app-auction [carid]="43215"></app-auction>
+            <h3>No car information found</h3>
         </div>
     </div>
 </div>
