--- a/frontend/src/app/components/auction/auction.component.html
+++ b/frontend/src/app/components/auction/auction.component.html
@@ -1,7 +1,7 @@
 <div class="container borderMargin">
-    <div class="row">
+    <div class="row flex-column">
         <div class="col">
-            <h1>Latest price {{currentPrice}}$</h1>
+            <h1>Latest price {{car.currentBid}}$</h1>
         </div>
         <div class="col">
             Car Data
