namespace work continues

--- a/frontend/src/app/components/car-details/car-details.component.html
+++ b/frontend/src/app/components/car-details/car-details.component.html
@@ -1,4 +1,4 @@
-<div class="container borderMargin">
+<div class="container borderMargin" *ngIf="car!=null">
     <div class="row flex-column">
         <div class="col">
             <h1>Latest price {{car.currentBid}}$</h1>
