dynamic id added to namespace

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<a (click)="goToCarGallery()" href="javascript:void(0)">Go to car gallery</a>
 <div class="container" *ngIf="cars.length">
     <div class="row">
         <div class="col" *ngFor="let car of cars">
