--- a/frontend/src/app/components/car-gallery-gql/car-gallery-gql.component.html
+++ b/frontend/src/app/components/car-gallery-gql/car-gallery-gql.component.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row" >
         <div class="col" *ngFor="let car of cars">
-            <div class="container borderMargin">
+            <div style="border: 1px solid black;" class="container borderMargin">
                 <div class="row flex-column">
                     <div class="col">
                         <h1>Latest price {{car.currentBid}}$</h1>
