--- a/frontend/src/app/components/car-gallery-gql/car-gallery-gql.component.html
+++ b/frontend/src/app/components/car-gallery-gql/car-gallery-gql.component.html
@@ -18,7 +18,7 @@
                         </ul>
                     </div>
                     <div class="col">
-                        <button (click)="setBidePrice()">Increase bid price(+{{increseLimit}}) </button>
+                        <button (click)="setBidPrice(car.id, car.currentBid)">Increase bid price(+{{increseLimit}}) </button>
                     </div>
                 </div>
                 <div class="row">
